--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- vendor -->
+    <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.min.css">
+
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
     <script src="vendor/lodash/lodash.js"></script>
