#4 added trash icon

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <span ng-if="!!row.balance">
             - {{ row.balance * 1e-8 }} BTC
         </span>
+        <span class="trash">
+            <i class="fa fa-trash-o"></i>
+        </span>
     </li>
 </ul>
 
