#4 added action for deleting wallet row

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span ng-if="!!row.balance">
             - {{ row.balance * 1e-8 }} BTC
         </span>
-        <span class="trash">
+        <span class="trash" ng-click="deleteRow(row)">
             <i class="fa fa-trash-o"></i>
         </span>
     </li>
