--- a/index.html
+++ b/index.html
@@ -28,12 +28,33 @@
 
 <input type="button" ng-click="checkBalances()" value="&#8634;" />
 
+<div class="wallet-header">
+    <span class="address">
+        Address
+    </span>
+
+    <span class="received">
+        Received <i class="fa fa-btc"></i>
+    </span>
+
+    <span class="balance">
+        Balance <i class="fa fa-btc"></i>
+    </span>
+</div>
 <ul class="wallet-list">
     <li ng-repeat=" row in $storage.wallet ">
-        {{ row.address }}
-        <span ng-if="!!row.balance">
-            - {{ row.balance * 1e-8 }} <i class="fa fa-btc"></i>
+        <span class="address">
+            {{ row.address }}
         </span>
+
+        <span class="received">
+            {{ row.received * 1e-8 }}
+        </span>
+
+        <span class="balance">
+            {{ row.balance * 1e-8 }}
+        </span>
+
         <span class="trash" ng-click="deleteRow(row)">
             <i class="fa fa-trash-o"></i>
         </span>
