--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body ng-controller="WalletController">
 
-<h3>Your addresses:</h3>
+<h3>Your wallet:</h3>
 
 <input type="button" ng-click="checkBalances()" value="&#8634;" />
 
