--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             Received <i class="fa fa-btc"></i>
         </span>
         <span class="sum">
-            {{ sumBalances('received') * 1e-8 }}
+            {{ sumBalances('received') * 1e-8 | btc }}
         </span>
     </span>
 
@@ -51,7 +51,7 @@
             Balance <i class="fa fa-btc"></i>
         </span>
         <span class="sum">
-            {{ sumBalances() * 1e-8 }}
+            {{ sumBalances() * 1e-8 | btc }}
         </span>
     </span>
 </div>
