#19 added translate module to project

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
+    <script src="vendor/angular-translate/angular-translate.js"></script>
+    <script src="vendor/angular-translate-storage-local/angular-translate-storage-local.js"></script>
+
     <script src="vendor/lodash/lodash.js"></script>
 
     <!-- app -->
