--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
 <body ng-controller="WalletController">
 
+<button>pl</button>
+<button>en</button>
+
 <h3>Your wallet:</h3>
 
 <input type="button" ng-click="checkBalances()" value="&#8634;" />
