--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <br/>
 
-    <input type="text" ng-model="address" placeholder="address / privkey" />
+    <input type="text" ng-model="address" placeholder="{{ 'WALLET.ADD.PLACEHOLDER' | translate }}" />
     <input type="button" ng-click="addAddress()" value="+" />
 </div>
 
