#25 added bitcoin data service

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <!-- filters -->
     <script src="scripts/filters/btc.js"></script>
 
+    <!-- services -->
+    <script src="scripts/services/bitcoinDataService.js"></script>
+
 </head>
 
 <body ng-controller="MainController">
