changed page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pl" ng-app="walletApp">
 <head>
     <meta charset="utf-8">
-    <title>wallet</title>
+    <title>open-wallet</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="stylesheet" href="css/style.css">
