--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
     <script src="vendor/angular-translate/angular-translate.js"></script>
     <script src="vendor/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="vendor/bitcore/browser/bundle.js"></script>
+
 
     <script src="vendor/lodash/lodash.js"></script>
 
