#5 created bitcore service

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <!-- services -->
     <script src="scripts/services/bitcoinDataService.js"></script>
+    <script src="scripts/services/bitcoreService.js"></script>
 
 </head>
 
