--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 
 <body ng-controller="MainController">
 
-
 <span class="i18n">
-    <span class="flag-icon flag-icon-pl" ng-click="setTranslation('pl')"></span>
-    <span class="flag-icon flag-icon-us" ng-click="setTranslation('en')"></span>
+    <span><span class="flag-icon flag-icon-pl" ng-click="setTranslation('pl')"></span></span>
+    <span><span class="flag-icon flag-icon-us" ng-click="setTranslation('en')"></span></span>
 </span>
 
 <h3>{{ 'WALLET.TITLE' | translate }}</h3>
