--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- services -->
     <script src="scripts/services/bitcoinDataService.js"></script>
     <script src="scripts/services/bitcoreService.js"></script>
+    <script src="scripts/services/utilsService.js"></script>
 
 </head>
 
