#12 created basic directive undoDialog

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <script src="scripts/services/bitcoreService.js"></script>
     <script src="scripts/services/utilsService.js"></script>
 
+    <!-- directives -->
+    <script src="scripts/directives/undoDialog.js"></script>
+
 </head>
 
 <body ng-controller="MainController">
