#12 added pathgenerator service

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     </span>
 </span>
 
+<div undo-dialog></div>
+
 <h3>{{ 'WALLET.TITLE' | translate }}</h3>
 
 <div ng-controller="WalletController">
