--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="scripts/services/bitcoinDataService.js"></script>
     <script src="scripts/services/bitcoreService.js"></script>
     <script src="scripts/services/utilsService.js"></script>
+    <script src="scripts/services/pathGeneratorService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
