#43 renamed en -> us

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <span ng-click="setTranslation('pl')">
         <span class="flag-icon flag-icon-pl"></span>
     </span>
-    <span ng-click="setTranslation('en')">
-        <span class="flag-icon flag-icon-us" ng-click="setTranslation('en')"></span>
+    <span ng-click="setTranslation('us')">
+        <span class="flag-icon flag-icon-us" ng-click="setTranslation('us')"></span>
     </span>
 </span>
 
