#12 created undo action service

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="scripts/services/bitcoreService.js"></script>
     <script src="scripts/services/utilsService.js"></script>
     <script src="scripts/services/pathGeneratorService.js"></script>
+    <script src="scripts/services/undoActionService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
