#12 created scss file for und-dialog

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </span>
 </span>
 
-<div undo-dialog></div>
+<div class="undo-dialog" undo-dialog></div>
 
 <h3>{{ 'WALLET.TITLE' | translate }}</h3>
 
