#9 added reset css to bower

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- vendor -->
+    <!-- vendor css -->
+    <link rel="stylesheet" href="vendor/normalize-css/normalize.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="vendor/flag-icon-css/css/flag-icon.min.css">
 
+    <!-- vendor js -->
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
     <script src="vendor/angular-translate/angular-translate.js"></script>
