#9 possibility to add filtered addresses to wallet

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <input type="text" ng-model="address" placeholder="{{ 'WALLET.ADD.PLACEHOLDER' | translate }}" />
     <input type="button" ng-click="addAddress()" value="+" />
 
-    <span class="bulk-add"></span>
+    <span class="bulk-add" add-callback="addAddresses"></span>
 
 </div>
 
