--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div ng-controller="WalletController">
     <input type="button" ng-click="checkBalances()" value="&#8634;" />
 
-    <a href ng-click=" sortByBalance() ">sort by balance</a>
+    <a href ng-click=" sortByBalance() ">{{ 'WALLET.SORT.BY_BALANCE' | translate }}</a>
 
     <div class="wallet-header">
         <span class="address">
