--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                 class="received"
                 ng-class="{ soft: row.received === 0 }"
             >
-                {{ row.received * 1e-8 | btc }}
+                {{ row.received | btc }}
             </span>
 
             <span
                 class="balance"
                 ng-class="{ soft: row.balance === 0 }"
             >
-                {{ row.balance * 1e-8 | btc }}
+                {{ row.balance | btc }}
             </span>
 
             <span class="trash" ng-click="deleteRow(row)" title="{{ 'WALLET.TABLE_ENTRIES.DELETE' | translate }}">
