#30 added storage service

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="scripts/services/pathGeneratorService.js"></script>
     <script src="scripts/services/undoActionService.js"></script>
     <script src="scripts/services/walletDataService.js"></script>
+    <script src="scripts/services/storageService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
