--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="scripts/services/undoActionService.js"></script>
     <script src="scripts/services/walletDataService.js"></script>
     <script src="scripts/services/storageService.js"></script>
+    <script src="scripts/services/walletEntryService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
