#69 added possibility to add privkeys

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
     <br/>
 
-    <input type="text" ng-model="address" placeholder="{{ 'WALLET.ADD.PLACEHOLDER' | translate }}" />
-    <input type="button" ng-click="addAddress()" value="+" />
+    <input type="text" ng-model="inputEntry" placeholder="{{ 'WALLET.ADD.PLACEHOLDER' | translate }}" />
+    <input type="button" ng-click="addEntry()" value="+" />
 
     <span class="bulk-add" add-callback="addAddresses"></span>
 
