--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="scripts/services/walletDataService.js"></script>
     <script src="scripts/services/storageService.js"></script>
     <script src="scripts/services/walletEntryService.js"></script>
+    <script src="scripts/services/bitcoinUtilsService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
