--- a/index.html
+++ b/index.html
@@ -86,7 +86,13 @@
         </span>
     </div>
     <ul class="wallet-list">
-        <li ng-repeat=" entry in wallet " ng-class="{ blink: entry.blink }">
+        <li
+            ng-repeat=" entry in wallet "
+            ng-class="{
+                blinkError: entry.blinkError,
+                blinkSuccess: entry.blinkSuccess
+            }"
+        >
             <span class="address">
                 {{ entry.address }}
             </span>
