--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="scripts/services/storageService.js"></script>
     <script src="scripts/services/walletEntryService.js"></script>
     <script src="scripts/services/bitcoinUtilsService.js"></script>
+    <script src="scripts/services/walletCompressService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
