--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <script src="scripts/services/walletEntryService.js"></script>
     <script src="scripts/services/bitcoinUtilsService.js"></script>
     <script src="scripts/services/walletCompressService.js"></script>
+    <script src="scripts/services/walletSyncService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
