#24 added update blink to entry

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
         <li
             ng-repeat=" entry in wallet "
             ng-class="{
-                blinkError: entry.blinkError,
-                blinkSuccess: entry.blinkSuccess
+                'blink-error': entry.blinkError,
+                'blink-add': entry.blinkAdd,
+                'blink-update': entry.blinkUpdate
             }"
         >
             <span class="address">
