--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="scripts/services/walletCompressService.js"></script>
     <script src="scripts/services/addressWatchService.js"></script>
     <script src="scripts/services/eventListenerService.js"></script>
+    <script src="scripts/services/vanityAddressService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
