focus textarea in bulk-add

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="vendor/ngstorage/ngStorage.min.js"></script>
     <script src="vendor/angular-translate/angular-translate.js"></script>
     <script src="vendor/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+    <script src="vendor/jquery/dist/jquery.min.js"></script>
     <script src="vendor/bitcore/browser/bundle.js"></script>
     <script src="vendor/lodash/lodash.js"></script>
 
