#54 created data queue service

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="scripts/services/walletCompressService.js"></script>
     <script src="scripts/services/addressWatchService.js"></script>
     <script src="scripts/services/eventListenerService.js"></script>
+    <script src="scripts/services/dataQueueService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
