#32 added simple vanity address interface

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 
     <input type="text" ng-model="inputEntry" placeholder="{{ 'WALLET.ADD.PLACEHOLDER' | translate }}" />
     <input type="button" ng-click="addEntry()" value="+" />
+    <input type="button" ng-click="generateVanity()" value="v" />
 
     <span class="bulk-add" add-callback="addAddresses"></span>
 
