#32 added some titles

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
     <br/>
 
     <input type="text" ng-model="inputEntry" placeholder="{{ 'WALLET.ADD.PLACEHOLDER' | translate }}" />
-    <input type="button" ng-click="addEntry()" value="+" />
-    <input type="button" ng-click="generateVanity()" value="v" />
+    <input type="button" ng-click="addEntry()" value="+" title="add new address" />
+    <input type="button" ng-click="generateVanity()" value="v" title="generate vanity address" />
 
     <span class="bulk-add" add-callback="addAddresses"></span>
 
