created config service

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script src="scripts/services/eventListenerService.js"></script>
     <script src="scripts/services/vanityAddressService.js"></script>
     <script src="scripts/services/dataQueueService.js"></script>
+    <script src="scripts/services/configService.js"></script>
 
     <!-- directives -->
     <script src="scripts/directives/undoDialog.js"></script>
